# swagger/swagger.json
@@ -5,7 +5,7 @@
       "title": "Task Manager API",
       "description": "API for managing tasks"
     },
-    "host": "localhost:5000",
+    "host": "localhost:7000",
     "basePath": "/api",
     "schemes": [
       "http"
@@ -29,6 +29,9 @@
                 "type": "object",
                 "properties": {
                   "username": {
+                    "type": "string"
+                  },
+                  "email": {
                     "type": "string"
                   },
                   "password": {
@@ -65,7 +68,7 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "username": {
+                  "email": {
                     "type": "string"
                   },
                   "password": {
